.kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lm
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
spec:
  rules:
  - host: lm.kub.sspcloud.fr
    http:
      paths:
      - backend:
          service:
            name: rstudio-507059
            port:
              number: 5000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - lm.kub.sspcloud.fr
